--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:0.9.+'
+
     }
 }
 apply plugin: 'android'
@@ -37,5 +38,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:19.+'
+    compile 'com.android.support:appcompat-v7:19.+',
+            'log4j:log4j:1.2.17'
 }
