--- a/ProgChrono/app/src/main/AndroidManifest.xml
+++ b/ProgChrono/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.progchrono.app" >
 
     <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
         android:allowBackup="true"
